--- a/AWS_Website/index.html
+++ b/AWS_Website/index.html
@@ -3,18 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>Slite - online presentations</title>
-	<meta name="title" content="jQuery One Page Scroll by Pete R. | The Pete Design" />
-	<meta name="description" content="Create an Apple-like one page scroller website (iPhone 5S website) with One Page Scroll plugin" />
-	<link rel="image_src" href="/images/notify_better_image.png" />
+	<meta name="title" content="SLITE - online presentations" />
+	<meta name="description" content="Upload or create powerpoint slides for web" />
+	<link rel="image_src" href="img/favicon.png" />
 
 	<meta content="http://slite.us" property="og:url" />
 	<meta content="http://slite.us/img/logo.png" property="og:image" />
 	<link rel="shortcut icon" id="favicon" href="img/favicon.png"> 
-	<meta name="author" content="Pete R.">
-	<link rel="canonical" href="http://www.thepetedesign.com/demos/onepage_scroll_demo.html" />
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Pacifico:400' rel='stylesheet' type='text/css'>
-        <script src="js/jquery-2.1.1.min.js"></script>
+	<meta name="author" content="SLITE inc.">
+	<link rel="canonical" href="http://slite.us" />
+	<script src="js/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="jquery.onepage-scroll.js"></script>
   <link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
@@ -157,7 +155,7 @@
   		  </div>
       </section>
     </div>
-    <div class="back" href="http://www.thepetedesign.com/#design">
+    <div class="back" href="http://www.slite.us">
 
         <nav class="navbar navbar-default m-navbar" role="navigation">
 
