Some fixed to signin, signup and index.html

--- a/AWS_Website/index.html
+++ b/AWS_Website/index.html
@@ -13,8 +13,8 @@
 	<meta name="author" content="SLITE inc.">
 	<link rel="canonical" href="http://slite.us" />
 	<script src="js/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="jquery.onepage-scroll.js"></script>
-  <link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="js/jquery.onepage-scroll.js"></script>
+  <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
   
 	
@@ -79,7 +79,7 @@
       	 </div>
       </section>
 	    
-	    <section class="page2" style="position: absolute; top: 100%; left: 0px;background: url(Background_BusinessMeeting.jpg) no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+	    <section class="page2" id="about" style="position: absolute; top: 100%; left: 0px;background: url(Background_BusinessMeeting.jpg) no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
             <div class="container-fluid" style='width: 50%;padding:0px;float: right; height: 100%'>
       			<div class=WordSection1>
       				<p class=MsoNormal>SLITE - the only company in the world allowing you to do <u>live</u> presentations without a projector or a conference room.
