--- a/AWS_Website/signin.html
+++ b/AWS_Website/signin.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/screen.css">
 
     </head>
-    <body>
+    <body style='background-image: url(img/Slite_Background.jpg);'>
         <section class="middle">
             <div class="container-fluid">
 
@@ -54,17 +54,17 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                         </button>
-                        <a href="javascript:goToPage(1)" class="logo"><img src="img/logo.png" width=100px></a>
+                        <a href="http://www.slite.us" class="logo"><img src="img/logo.png" width=100px></a>
                       </div>
 
                       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style='z-index: 5'>
                         <ul class="nav navbar-nav">
                           <li>
-                              <a href="javascript:goToPage(2);" class='menuLink' id='menuAbout'>About</a>
+                              <a href="http://www.slite.us#2" class='menuLink' id='menuAbout'>About</a>
                           </li>
                           <li>
-                <a href="javascript:goToPage(3);" class='menuLink' id='menuContact'>Contact</a>
-              </li>
+                              <a href="http://www.slite.us#3" class='menuLink' id='menuContact'>Contact</a>
+                          </li>
                         </ul>
 
                         <!--<form class="navbar-form navbar-left" role="search">
