--- a/AWS_Website/signup.html
+++ b/AWS_Website/signup.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/screen.css">
 
     </head>
-    <body>
+    <body style='background-image: url(img/Slite_Background.jpg);'>
         <section class="middle">
             <div class="container-fluid">
 
@@ -55,8 +55,7 @@
         </section>
 
 				<div class="back" href="http://www.slite.us">
-
-        <nav class="navbar navbar-default m-navbar" role="navigation">
+ <nav class="navbar navbar-default m-navbar" role="navigation">
 
                   <div class="container-fluid">
                       <!-- Brand and toggle get grouped for better mobile display -->
@@ -67,17 +66,17 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                         </button>
-                        <a href="javascript:goToPage(1)" class="logo"><img src="img/logo.png" width=100px></a>
+                        <a href="http://www.slite.us" class="logo"><img src="img/logo.png" width=100px></a>
                       </div>
 
                       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style='z-index: 5'>
                         <ul class="nav navbar-nav">
                           <li>
-                              <a href="javascript:goToPage(2);" class='menuLink' id='menuAbout'>About</a>
+                              <a href="http://www.slite.us#2" class='menuLink' id='menuAbout'>About</a>
                           </li>
                           <li>
-                <a href="javascript:goToPage(3);" class='menuLink' id='menuContact'>Contact</a>
-              </li>
+                              <a href="http://www.slite.us#3" class='menuLink' id='menuContact'>Contact</a>
+                          </li>
                         </ul>
 
                         <!--<form class="navbar-form navbar-left" role="search">
@@ -110,9 +109,10 @@
                       </div><!-- /.navbar-collapse -->
                   </div><!-- /.container-fluid -->
           </nav>
-	  </div>
         
-	<script src="js/jquery-2.1.1.min.js"></script>
+		</div>
+        
+		<script src="js/jquery-2.1.1.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-2.1.1.min.js"><\/script>')</script>
         <script src="js/bootstrap.js"></script>
         <script src="js/main.js"></script>
