--- a/BACKEND/FRONTEND/www/A2/PPT/SliteShow_PitchDeck.pptx.html/img10.html
+++ b/BACKEND/FRONTEND/www/A2/PPT/SliteShow_PitchDeck.pptx.html/img10.html
@@ -9,7 +9,7 @@
   <script language="JavaScript" src="../../js/socket.io.js"></script>
   <script language="JavaScript" src="../../js/jquery-2.0.3.min.js"></script>
   	<script>
-	  var socket = io.connect('http://slite-dev.elasticbeanstalk.com:1337');
+	  var socket = io.connect('http://slite-prod.elasticbeanstalk.com:1337');
 		//var socket = io.connect('http://localhost:1337');
 		
 		document.addEventListener("DOMContentLoaded", function(){
