--- a/BACKEND/FRONTEND/www/A2/index.html
+++ b/BACKEND/FRONTEND/www/A2/index.html
@@ -34,7 +34,7 @@
 
 	<script>
         
-    var socket = io.connect('http://slite-dev.elasticbeanstalk.com:1337');
+    var socket = io.connect('http://slite-prod.elasticbeanstalk.com:1337');
     //var socket = io.connect('http://localhost:1337');
     
     socket.on('news', function (data) {	
