Fixed "black" background for account.html

--- a/AWS_Website/account.html
+++ b/AWS_Website/account.html
@@ -19,7 +19,7 @@
         <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
     </head>
-    <body>
+    <body style='background-image: url(img/Slite_Background.jpg);'>
         <nav class="navbar navbar-default m-navbar" role="navigation">
 
                 <div class="container-fluid">
