--- a/AWS_Website/signup.html
+++ b/AWS_Website/signup.html
@@ -66,7 +66,7 @@
                           <span class="icon-bar"></span>
                           <span class="icon-bar"></span>
                         </button>
-                        <a href="http://www.slite.us" class="logo"><img src="img/logo.png" width=100px></a>
+                        <a href="/" class="logo"><img src="img/logo.png" width=100px></a>
                       </div>
 
                       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style='z-index: 5'>
