--- a/AWS_Website/A1/PPT/SliteShow_PitchDeck.pptx.html/img9.html
+++ b/AWS_Website/A1/PPT/SliteShow_PitchDeck.pptx.html/img9.html
@@ -6,10 +6,10 @@
   <title>Slite: polls</title>  
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <script language="JavaScript" src="../../js/global.js"></script>
-  <script language="JavaScript" src="../../js/socket.io.js"></script>
+  <script src="http://slite-prod.elasticbeanstalk.com:1337/socket.io/socket.io.js"></script>
   <script language="JavaScript" src="../../js/jquery-2.0.3.min.js"></script>
   	<script>
-	  var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
+	  var socket = io.connect('http://slite-prod.elasticbeanstalk.com:1337');
 		//var socket = io.connect('http://localhost:1337');
 		
 		document.addEventListener("DOMContentLoaded", function(){
