--- a/AWS_Website/index.html
+++ b/AWS_Website/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -52,7 +52,7 @@
        $('.menuLink').toggleClass('active');
 		}		
         </script>
-        <script src="http://slite-prod.elasticbeanstalk.com:1337/socket.io/socket.io.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="js/client.js"></script>
         <script src="js/main.js"></script>
     </body>
