--- a/AWS_Website/remote/index_old2.html
+++ b/AWS_Website/remote/index_old2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 	<head>
     <meta charset="utf-8" content="user-scalable=yes">
@@ -13,8 +13,7 @@
     <script src="./js/browserPicker.js"></script>
 
     <script>
-      var socket = io.connect('http://slite.elasticbeanstalk.com:1337');
-      //var socket = io.connect('http://localhost:1337');
+      var socket = io.connect();
     </script>
     <!--<script defer src="./js/LASER_CONTROL.js"></script>-->
     
