Separated socket.io and express ports due to the conflict.
Remote doesn`t work, needs fixing.

--- a/AWS_Website/remote/index.html
+++ b/AWS_Website/remote/index.html
@@ -15,7 +15,7 @@
     <script src="./js/thumbs.0.6.0.min.js"></script>
 
     <script>
-			var socket = io.connect();
+        var socket = io.connect(document.location.hostname + ':1337');
     </script>
 
 	</head>
