--- a/AWS_Website/hash_index.html
+++ b/AWS_Website/hash_index.html
@@ -15,7 +15,7 @@
 	<script src="../../js/jquery-ui-1.8.22.custom.min.js"></script>
 	<script class="rs-file" src="../../js/jquery.royalslider.min.js"></script>
 	<script src="../../js/jquery.infinitescroll.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
 
 	<!-- Lev: This script controls the laser dot -->
 	<script defer src="../../js/LASER_RECEIVER.js"></script>
@@ -35,7 +35,7 @@
 <link rel="stylesheet" type="text/css" href="../../css/index1.css">
 
 <script>
-	var socket = io.connect();
+    var socket = io.connect(document.location.hostname + ':1337');
 
 socket.on('ccBroadcast', function (data) {
 	//alert("JD: ccBroadcast text="+data.hello);
