--- a/AWS_Website/A1/index.html
+++ b/AWS_Website/A1/index.html
@@ -887,6 +887,8 @@
 						navigateByCenterClick: true
 					}
 				  });
+				  	
+					var slider = $(".royalSlider").data('royalSlider');
 					for (var slide = 1; slide <= 15; ++slide) {
 						//var slide_html_path= "C:\\Users\\marov\\Documents\\GitHub\\mobremcon\\BACKEND\\TEST\\MA\\SliteShow_PitchDeck.pptx.html\\";
 						//var slide_html_path = data.filename;
@@ -899,11 +901,12 @@
 							+ "<h5>SLIDE"+slide+"</h5>"
 							+ "     <span>Slide "+slide+" here</span>"
 							+ "</div> </div>";
-
-						var slider = $(".royalSlider").data('royalSlider');
 						slider.appendSlide(slide_html);
 					}
 
+					slider.ev.on('rsAfterSlideChange', function(event) {
+						clearCanvas();
+					});
 
 					$("#video-gallery").css("height","100%");
 					$(".rsOverflow").css("height","100%");
