--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -81,67 +81,30 @@
 	    
 	    <section class="page2" id="about" style="position: absolute; top: 100%; left: 0px;background: url(Background_BusinessMeeting.jpg) no-repeat; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
             <div class="container-fluid" style='width: 50%;padding:0px;float: right; height: 100%'>
-      			<div class=WordSection1>
-      				<p class=MsoNormal>SLITE - the only company in the world allowing you to do <u>live</u> presentations without a projector or a conference room.
-      				We can do everything PowerPoint can and 1,000 times more (literally) ... and for free. Why? Because we have a new patented technology allowing us to do magic:</p>
-
-      				<p class=MsoNormal>Do you want to do presentations without renting a projector? With
-      				SLITE you can!</p>
-
-      				<p class=MsoNormal>Do you want to do presentations without renting a conference room? With
-      				SLITE you can!</p>
-
-      				<p class=MsoNormal>Do you want to show live(!) data inside your slide? With
-      				SLITE you can!</p>
-
-      				<p class=MsoNormal>Do you want to allow your audience to comment, like, vote  inside your presentation? With
-      				SLITE you can!</p>
-
-      				<p class=MsoNormal>Do you want a tool allowing you to make a documented
-      				decision during the meeting? And have that decision stay with your presentation and not in a separate document? With SLITE you can!</p>
-
-      				<p class=MsoNormal>Do you want a transcript of what was said during the
-      				presentation, automatically? With SLITE you can!</p>
-
-      				<p class=MsoNormal>Do you want to control presentation with your cell phone?
-      				With SLITE you can!</p>
-
-      				<p class=MsoNormal>Do you want to control presentation simply by voice?
-      				With SLITE you can!</p>
-
-      				<p class=MsoNormal>Do you want to do presentations in a park, with audience
-      				watching it on their cell phones? With SLITE you can!</p>
-
-      				<p class=MsoNormal>So why did we created SLITE?</p>
-
-      				<p class=MsoNormal>It all started with me, CEO, being a DJ. Yes a DJ in
-      				nightclubs. After I was already an established DJ, I started producing my own
-      				events. What I liked about it was that this was an infinite medium: you could
-      				do fashion shows, paintings, masquerades and so on. Over time my events grew
-      				from simple DJ dancing to extravagant shows. But even that was not enough. I
-      				was limited by the walls of the clubs where I was doing my shows.
-      				And then I looked into the web ?</p>
-
-      				<p class=MsoNormal>Who likes trivia shows? I do. So I hang out with very very
-      				smart people: PhDs, scientists, and just simply walking Wikipedias (and models
-      				due to my DJ career). And with the best of them we formed our
-      				company - SLITE.</p>
-
-      				<p class=MsoNormal>We simply got tired of all the limitation of the PowerPoint:
-      				being forced to squeeze data into slides, waste people's time with projector setups, and not be able to do what we used to with other technologies: how many times you tried to "like" a slide? Just to tell you
-      				how bad this problem is: it was determined that Shuttle Discovery disaster
-      				happened because of the PowerPoint inherit notion of data condensation. Did I mention
-      				that with SLITE you can have infinite! data per slide? People cannot deal
-      				anymore with something that was designed in 1995 to model after the film which
-      				you used to stick into a projector. One of our missions in SLITE is to change the
-      				English meaning of the word - presentation.</p>
-
-      				<p class=MsoNormal>We are a small company based in Silicon Valley, California,
-      				USA. We work hard on this product, but also want to make it fun. This might go
-      				against any good business advice, but what we cherish the most about our product is "how cool is it"!</p>
-
-      				<p class=MsoNormal>If you want to inquire about a product or make a suggestion
-      				please write to us at: info@slite.us or directly to me, Jim, at ceo@slite.us.</p>
+      			<div class=WordSection1 style='font-size: 17px; padding-top: 70px;'>
+      				<p>About our product:</p>
+					<p>Slite - is a new way of doing what was called &ldquo;Powerpoint presentation&rdquo; in XX century.</p>
+					<p>Slite - is a combination of Powerpoint, Skype, and Facebook. While doing your presentation you are able to text chat, video chat, poll your audience live and have a cool iPhone and Android app to control your presentation. Moreover, your presentations now live on the web, so you can never forget them or lose them. And the coolest thing? No installation, not even registration required! Use it for free.</p>
+					<p>How it works?</p>
+					<ol>
+					<li>You upload your existing Powerpoint presentation on our main page OR you create a presentation online on our website in minutes!</li>
+					<li>You get a unique 4 digit code that you can use to enter in browser AND share with everyone you want to show your presentation to.</li>
+					<li>Now you can show your presentation to anyone in the world (!) looking at this unique address of your presentation LIVE! (all they need is internet browser, and nothing else!)</li>
+					<li>Cool things you can do during your presentation:<ol>
+					<li>use mobile app remote control to: move to next/previous slide, have a virtual laser pointer, draw on slides from your phone, and just for fun: voice control your presentation!</li>
+					<li>poll your audience live. Get feedback immediately on your topic during the presentation.</li>
+					<li>video present, right inside your presentation! for those who are not in the room</li>
+					<li>have all minutes/notes of the presentation stay with your presentation forever.</li>
+					</ol></li>
+					</ol>
+					<p>&nbsp;</p>
+					<p>About our company:</p>
+					<p>We are young company based in Mountain View - a city in the heart of Silicon Valley, California.</p>
+					<p>It took 2 PhDs and 75 years of experience to design and make this product for you guys.</p>
+					<p>Our goal is to make your life easier, make presentations less boring and more fun (while increasing your productivity).</p>
+					<p>We embrace latest, coolest technologies and let you play with them in our product while making sure your 80 year grandmother is able to use our product too.</p>
+					<p>&nbsp;</p>
+					
                   </div>
       			</div>
       </section>
