--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -22,17 +22,16 @@
     
 	</head>
 <body onload="startup()"
-    ><br
-    ><div class="UI topRow leftCol" id="menu">&nbsp;</div
+    ><div class="UI topRow leftCol" id="menu" style="display: none">&nbsp;</div
     ><div class="UI topRow midCol" id="URLBox">http://www.slite.us/<input type="text" id="URLSlides" value="A1"></div
-    ><div class="UI topRow rightCol" id="timeDisplay">Start Timer</div
+    ><div class="UI topRow rightCol" id="timeDisplay"  style="display: none">Start Timer</div
     ><br
-    ><div class="UI midRow leftCol" id="notes">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div
+    ><div class="UI midRow leftCol" id="notes"  style="display: none">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div
     ><div class="UI midRow midCol wrap" id="currentSlide" onclick="void(0)"
         ><div id="overlay"></div
         ><iframe id="theIframe" class="frame" src="http://www.slite.us/A1" seamless></iframe
     ></div
-    ><div class="UI midRow rightCol" id="otherSlides">
+    ><div class="UI midRow rightCol" id="otherSlides"  style="display: none">
         <button></button>
         <button></button>
         <button></button>
