New A1 pitch deck (up to slide 5 modified)

--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/SliteShow_PitchDeck.html
@@ -19,6 +19,6 @@
   </style>
 </head>
 <body>
-<center><img src="../img/SliteLogo_Subtitle.gif" alt="slite logo"></center>
+<center><img src="../img/SLITE_LOGO.gif" alt="slite logo"></center>
 </body>
 </html>
