--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img12.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img12.html
@@ -3,24 +3,25 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Business Model and Monitization</title>
+  <title>Slite: Other features</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
 </head>
 <body>
 <center>
-	<div class="title" style='padding-top: 20px'>BUSINESS MODEL</div>
-	<div class="slideBody">
+	<div class="title">OTHER FEATURES</div>
+	<div class="slideBody" style='font-size:45px; line-height:55px;'>
 		<ul>
-	      <li>SAAS (direct sales from website)</li>
-	      <li>WHITE LABELING (licensing of internal Intranet solution)</li>
-		</ul>
-	</div>
-	<div class="title" style='padding-top: 20px'>MONETIZATION</div>
-	<div class="slideBody">
-		<ul>
-	      <li>FREEMEUM (everything free, pay for features, extra storage)</li>
-	      <li>IN SLIDE ADS (some, only in free version)</li>
-	     <li>ENTERPRISE SOLUTION PACKAGES (B2B)</li>
+			<li>Video Conferencing</li>
+			<li>Social: like, comment, share</li>
+			<li>Close Captioning</li>
+			<li>Live translation into any language</li>
+			<li>Free remote control iPhone app</li>
+				<ul>
+					<li>laser pointer</li>
+					<li>drawing</li>
+					<li>clicker</li>
+					<li>voice control</li>
+				</ul>
 		</ul>
 	</div>
 </center>
