--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img2.html
@@ -3,30 +3,91 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Market</title>
+  <title>Slite: Team</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-  <style>
-  	li{
-  		padding-top: 3px;
-  	}
+  <style type="text/css">
+.photos ul {
+          list-style: none;
+
+        }
+
+        .photos ul li { 
+            display: inline;
+            list-style: none;
+            float: left;
+            padding: 0 10px 0 0;
+            text-align:center; 
+        }
+
+        .photos ul li span a {
+            background-color: #fff;
+        }
+
+        .photos ul li a {
+
+          display: block;
+          /*
+          margin-right: 10px;
+          margin-bottom: 7px; */
+          -webkit-transition: all 0.3s linear;
+          -moz-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+        }
+        .photos ul li a:hover {
+          opacity: 1.0;
+        }
+
+        .photos ul li a img {
+          border: 6px solid #e1d9ec;
+		  width: 180px;
+		  height: 180px;
+        } color: #000;
+		
+}
   </style>
 </head>
 <body>
 <center>
-	<div class="title" style='padding-top:10px;padding-bottom:10px;'>MARKET</div>
-	<div class="slideBody" style='with: 100%; padding: 0px'>
-		<div>
-			<img src="../img/slite_market.gif" style='width: 48%; height: 70%; float: left'>
-			<img src="../img/WebConferencing_Market_Forecast.jpg" style='width: 48%; height: 70%; margin-top:10%; float:right'>
-		</div>
+	<div class="title">TEAM</div>
+	<div class="slideBody" style='padding-left: 10px; padding-top: 0px;'>
+		<ul style='padding-left: 200px;'>
+	     <li>5 people, 2 PhDs, all based in Mountain View, CA, 50+ yrs experience</li>
+		 <!--<ul>
+			<li>Microsoft, Yahoo, KPMG, Arthur Andersen</li>
+		 </ul>-->
+		</ul>
 
-		<div  sytle='clear: both'></div>
-		 
-		 <div style='clear: both; text-align: center; padding-top: 5px;'>     	
-			 <div style='font-size: 20px;'>Source: Gartner 2Q13</div>
-		     <!--<div style='padding-top: 0px; margin-top: 2px; margin-bottom: 2px;'>Target: 3.5% of the market in 24 month = <b>$175 million</b></div>-->
-		</div>
-	</div>
+
+<center>
+	<h3>Executive Members</h3>
+  <div class="photos" style='font-size: 20px; width: 900px'>
+        <ul style='padding-left: 10px; margin-left:0px;'>
+            <li>
+				<div><a href="#"><img src="../img/Team_Jim.jpg"/></a></div>
+				<div class='teamMember'>CEO: Jim Dukhovny</div>
+				<div class='teamMember'>Architect of Windows 8 schema</div>				
+				<div class='teamMember'>Author of current SF nightclub business model</div>
+				<div class='teamMember'>10 yrs business owner</div>
+            </li>
+
+            <li><span><a href="#"><img src="../img/Team_Andrew.jpg"/></a></span>
+            <div class='teamMember'>VP of Business: Andrew Strigin</div>
+            <div class='teamMember'>PhD in Computer Science</div>			
+            <div class='teamMember'>Co-Founder of 2 startups</div>
+            </li>		
+			
+
+            <li><a href="#"><img src="../img/Team_Michael.jpg" /></a>
+            <div class='teamMember'>CTO: Michael Arov</div>
+            <div class='teamMember'>PhD in Physics</div>
+            <div class='teamMember'>15 yrs software experience</div>
+            </li>
+        </ul>
+ </div>
+</center>
+
+<div style='clear:both;'>&nbsp;</div>
+
 </center>
 </body>
 </html>
