--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img3.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Pain Points</title>
+  <title>Slite: What we do</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
 	li {
@@ -13,21 +13,20 @@
 </head>
 <body>
 <center>
-	<div class="title">PAIN POINTS FOR PRESENTATIONS</div>
-	<div class="slideBody" style='font-size:55px; line-height: 65px'>
-		<ul>
-				<li>Need to rent projector and rent conference room</li>
-				<li>Frastration with hardware and software setup</li>
-			      <ul>
-			      	<!--<li>15% lost on setup instead of content</li>
-			      	<li><span style='font-size:30px'><b>$11 billion annually</b> in US loss ONLY on setup issues</span></li>
-			      	<li>A year of your life (avg) is wasted in unproductive meetings</li>-->
-			      </ul>
-				<li>No Web 2.0 features</li>
-		      	<!--<ul style='font-size:30px;'>
-		      		<li>Commenting, Interactive, Sharing</li>
-		      	</ul>-->
-				<li style='padding-top:40px; font-size:50px'>... (many more: everyone have problems with how it works now)</li>
+	<div class="title">COMPANY</div>
+	<div class="slideBody" style='font-size:35px; line-height: 40px'>
+		<ul>				
+				<li>Remote Presentations company</li>
+				<li>Mountain View, California</li>
+				<li>1 year old, looking for Seed Round</li>
+				<li>Verbal and written letters of intent from:</li>
+		      	<ul style='font-size: 30px'>
+					<li>Online Education companies</li>
+					<li>Conference organizers</li>
+					<li>Stanford, Berkeley university students</li>
+					<li>Inside sales</li>
+			    </ul>
+				<li>Launch in upcoming months</li>
 		</ul>
 	</div>
 </center>
