--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img4.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img4.html
@@ -3,41 +3,31 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Solution Slite</title>
+  <title>Slite: Pain Points</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
-<style>
-	ul{
-		padding-top: 0px; padding-bottom: 0px;
+  <style>
+	li {
+		padding-bottom: 20px;
 	}
-	li{
-		padding-top: 0px; padding-bottom: 0px;
-	}
-
-</style>
+  </style>
 </head>
 <body>
 <center>
-	<div class="title" style='padding-bottom: 10px; margin-bottom: 10px;'>SOLUTION: SLITE</div>
-	<div class="slideBody">
-		<center>
-		<img src="../img/Slite_ShareSlide.gif" alt="slite share diagram" style='padding: 0px; padding-right:120px; width: 743px; height: 202px'/>
-		</center>
-		
-			<div >
-				<ul style='padding-top:30px; display:table; margin:0 auto;'>
-				  <li>PORTAL AND TOOLS FOR <u>LIVE</u> PRESENTATIONS</li>
-					 <!--<ul>
-					   <li>upload, create</li>
-					   <li>present using app remote control</li>
-					   <li>vote, like, share, comment</li> 
-					</ul>-->
-				  <!--<li>NEW <b>PATENTED</b> PARADIGM!</li>
-					  <ul>
-						   <li>slide = WEBPAGE = window into the world</li>
-					  </ul>
-				 </li>-->
-				</ul>
-			</div>
+	<div class="title">PROBLEMS</div>
+	<div class="slideBody" style='font-size:40px; line-height: 45px'>
+		<ul>				
+				<li>Non-tech savvy users (majority of population) are unable to use remote presentations</li>
+				<li>Too many different tools are required for presentation life cycle</li>
+				<li>No “buy” option for companies who need to embed remote presentation functionality in their products</li>
+		      	<!--<ul style='font-size:30px;'>
+		      		<li>Commenting, Interactive, Sharing</li>
+		      	</ul>-->
+				<!--<ul>
+			      	<li>15% lost on setup instead of content</li>
+			      	<li><span style='font-size:30px'><b>$11 billion annually</b> in US loss ONLY on setup issues</span></li>
+			      	<li>A year of your life (avg) is wasted in unproductive meetings</li>
+			      </ul>-->
+		</ul>
 	</div>
 </center>
 </body>
