--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img5.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img5.html
@@ -3,35 +3,34 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Competition</title>
+  <title>Slite: Pain Points</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
 	li {
-		padding-bottom: 10px;
+		padding-bottom: 20px;
 	}
   </style>
 </head>
 <body>
 <center>
-	<div class="title">COMPETITION</div>
-	<div class="slideBody" style='font-size:45px; line-height: 50px'>
+	<div class="title">SOLUTION</div>
+	<div class="slideBody" style='font-size:40px; line-height: 45px'>
 		<ul>
-				<li><u>Competitors:</u></li>
-					<ul>
-						<li>Powerpoint, SlideShare, Prezi, WebEx (...)</li>
-					</ul>
-				<li><u>Differentiators:</u></li>
+				<li>Powerpoint meets Facebook meets Skype meets Web 2.0</li>
+				<li>In-browser remote presentation platform</li>
 				<ul>
-					<li>Live web presentation, not storage and not desktop sharing</li>
-					<li>No hardware, software, login required!</li>
-					<li>All web 2.0 features</li>
-					<li>Infinite amount of data per slide</li>
-				</ul>				
-				<li><u>Advantage / Barriers to entry:</u></li>
-					<ul>
-						<li>1st to Market (because we <b>created new market!</b>)</li>
-						<li>Patented technology allowing to do <i>same features</i> in days when other companies take years</li>
-					</ul>
+					<li>Web Portal for live presentation, discussion and video communication inside presentation</li>
+					<li>Remote Control iPhone and Android app </li>
+					<li>Simple API for embedding into other products </li>
+				</ul>
+		      	<!--<ul style='font-size:30px;'>
+		      		<li>Commenting, Interactive, Sharing</li>
+		      	</ul>-->
+				<!--<ul>
+			      	<li>15% lost on setup instead of content</li>
+			      	<li><span style='font-size:30px'><b>$11 billion annually</b> in US loss ONLY on setup issues</span></li>
+			      	<li>A year of your life (avg) is wasted in unproductive meetings</li>
+			      </ul>-->
 		</ul>
 	</div>
 </center>
