--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img6.html
@@ -3,21 +3,36 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Other companies</title>
+  <title>Slite: Competition</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
-  	ul{
-  		padding-top:0px; padding-bottom: 0px; margin-bottom: 0px;
-  	}
+	li {
+		padding-bottom: 10px;
+	}
   </style>
 </head>
 <body>
 <center>
-	<div class="title" style='padding-bottom: 10px; margin-bottom: 10px;'>FUNDED COMPANIES - WHOLE BUSINESS <u>ONE</u> OF OUR FEATURES</div>
-	<div class="slideBody" style='padding-top:50px;'>
-	<center>
-	      <img src='../img/slite_competitors.gif' style='width: 900px; height: 500px; padding: 0px; margin: 0px;'>
-  </center>
+	<div class="title">COMPETITION</div>
+	<div class="slideBody" style='font-size:45px; line-height: 50px'>
+		<ul>
+				<li><u>Competitors:</u></li>
+					<ul>
+						<li>Powerpoint, SlideShare, Prezi, WebEx (...)</li>
+					</ul>
+				<li><u>Differentiators:</u></li>
+				<ul>
+					<li>Live web presentation, not storage and not desktop sharing</li>
+					<li>No hardware, software, login required!</li>
+					<li>All web 2.0 features</li>
+					<li>Infinite amount of data per slide</li>
+				</ul>				
+				<li><u>Advantage / Barriers to entry:</u></li>
+					<ul>
+						<li>1st to Market (because we <b>created new market!</b>)</li>
+						<li>Patented technology allowing to do <i>same features</i> in days when other companies take years</li>
+					</ul>
+		</ul>
 	</div>
 </center>
 </body>
