--- a/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
+++ b/AWS_Website/www_static/A1/PPT/SliteShow_PitchDeck.pptx.html/img7.html
@@ -3,15 +3,22 @@
 <html>
 <head>
   <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
-  <title>Slite: Embedded Website 1</title>
+  <title>Slite: Other companies</title>
   <link rel="stylesheet" type="text.css" href="./css/slide.css">
   <style>
-    body, html, center {
-      margin: 0; padding: 0; height: 100%; overflow: hidden;
-    }
+  	ul{
+  		padding-top:0px; padding-bottom: 0px; margin-bottom: 0px;
+  	}
   </style>
 </head>
 <body>
- <iframe style="overflow:hidden" height="100%" width="100%" src="http://www.frys.com/product/8259476"></iframe>
+<center>
+	<div class="title" style='padding-bottom: 10px; margin-bottom: 10px;'>FUNDED COMPANIES - WHOLE BUSINESS <u>ONE</u> OF OUR FEATURES</div>
+	<div class="slideBody" style='padding-top:50px;'>
+	<center>
+	      <img src='../img/slite_competitors.gif' style='width: 900px; height: 500px; padding: 0px; margin: 0px;'>
+  </center>
+	</div>
+</center>
 </body>
 </html>
