--- a/AWS_Website/www_static/hash_index.html
+++ b/AWS_Website/www_static/hash_index.html
@@ -132,6 +132,11 @@ function showHideVideoChat(){
 		//put main window back to full size
 		$(".rsContainer").animate({"width":"100%", "clear":"both"},300);
 		//$(".rsContainer").css({"width":"100%", "clear":"both"});
+		
+		// remove the video window on closing the panel
+		var videosContainer = document.getElementById('videos-container');
+		videosContainer.removeChild(videosContainer.firstChild);
+		
 		isVideoOn = false;
 	}
 
@@ -611,7 +616,7 @@ $( "#setup-new-room" ).trigger( "click" );
 					openSocket: function(config) {
 						var channel = config.channel || location.href.replace( /\/|:|#|%|\.|\[|\]/g , '');
 						channel += _channelHash;
-						var socket = new Firebase('https://chat.firebaseIO.com/' + channel);
+						var socket = new Firebase('https://webrtc.firebaseIO.com/' + channel);
 						socket.channel = channel;
 						socket.on("child_added", function(data) {
 							config.onmessage && config.onmessage(data.val());
