--- a/AWS_Website/www_static/hash_index.html
+++ b/AWS_Website/www_static/hash_index.html
@@ -46,7 +46,7 @@ socket.on('ccBroadcast', function (data) {
 
 socket.on('news', function (data) {
 
-	if (document.location.pathname == "/"+ data.slideID) {
+	if (document.location.pathname == "/"+ data.slideID +"/") {
 		var button = data.hello-1;
 
 		console.log(button);
@@ -846,12 +846,12 @@ $( "#setup-new-room" ).trigger( "click" );
 			for (var slide = 1; slide <= number_of_slides; ++slide) {
 				//var slide_html_path= "C:\\Users\\marov\\Documents\\GitHub\\mobremcon\\BACKEND\\TEST\\MA\\SliteShow_PitchDeck.pptx.html\\";
 				//var slide_html_path = data.filename;
-				var slite = '/HASH_TEMPLATE/';
-				var slide_html_path = slite + "img" + (slide-1) + ".jpg" + "?ts=" + (new Date().getTime()); //slide url with added time stamp to stop caching
+				var slide_html_path = '/HASH_TEMPLATE/' + "img" + slide + ".jpg" + "?ts=" + (new Date().getTime()); //slide url with added time stamp to stop caching
+				var slite = "HASH_TEMPLATE";
 				var slider = $(".royalSlider").data('royalSlider');
-				if (slite.length == 15) // we did not do any replacment!
+				if (slite.length == 13) // we did not do any replacment!
 				{
-					slide_html_path= "PPT/SliteShow_PitchDeck.pptx";
+					slide_html_path= "A1/PPT/SliteShow_PitchDeck.pptx";
 					if (slide == 1) slide_html_path += ".html/SliteShow_PitchDeck.html";
 					else slide_html_path += ".html/img"+slide+".html" + "?ts=" +  (new Date().getTime()); //slide url with added time stamp to stop caching
 					var slide_html= "<div style='text-align:center' id=slide class='rsContent'>"
