--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -48,7 +48,7 @@
 
     socket.on('news', function (data) {
 
-	if (document.location.pathname == "/"+ data.slideID +"/") {
+	if (document.location.pathname == "/"+ data.slideID) {
 		var button = data.hello-1;
 
 		console.log(button);
@@ -904,25 +904,38 @@
 					}
 				  });
 				  	
-					var slider = $(".royalSlider").data('royalSlider');
-					for (var slide = 1; slide <= 15; ++slide) {
+					var number_of_slides = "NUM_SLIDES_TEMPLATE";
+					if (!parseInt(number_of_slides, 10)) number_of_slides = 15;
+					for (var slide = 1; slide <= number_of_slides; ++slide) {
 						//var slide_html_path= "C:\\Users\\marov\\Documents\\GitHub\\mobremcon\\BACKEND\\TEST\\MA\\SliteShow_PitchDeck.pptx.html\\";
 						//var slide_html_path = data.filename;
-						var slide_html_path= "PPT/SliteShow_PitchDeck.pptx";
-						if (slide == 1) slide_html_path += ".html/SliteShow_PitchDeck.html";
-						else slide_html_path += ".html/img"+slide+".html" + "?ts=" +  (new Date().getTime()); //slide url with added time stamp to stop caching
-						var slide_html= "<div style='text-align:center' id=slide class='rsContent'>"
-							+ "<iframe src='"+slide_html_path+"' width='100%' height='100%' seamless> </iframe>"
-							+ "<div class='rsTmb'>"
-							+ "<h5>SLIDE"+slide+"</h5>"
-							+ "     <span>Slide "+slide+" here</span>"
-							+ "</div> </div>";
-						slider.appendSlide(slide_html);
+						var slite = '/HASH_TEMPLATE/';
+						var slide_html_path = slite + "img" + (slide-1) + ".jpg" + "?ts=" + (new Date().getTime()); //slide url with added time stamp to stop caching
+						var slider = $(".royalSlider").data('royalSlider');
+						if (slite.length == 15) // we did not do any replacment!
+						{
+							slide_html_path= "PPT/SliteShow_PitchDeck.pptx";
+							if (slide == 1) slide_html_path += ".html/SliteShow_PitchDeck.html";
+							else slide_html_path += ".html/img"+slide+".html" + "?ts=" +  (new Date().getTime()); //slide url with added time stamp to stop caching
+							var slide_html= "<div style='text-align:center' id=slide class='rsContent'>"
+								+ "<iframe src='"+slide_html_path+"' width='100%' height='100%' seamless> </iframe>"
+								+ "<div class='rsTmb'>"
+								+ "<h5>SLIDE"+slide+"</h5>"
+								+ "     <span>Slide "+slide+" here</span>"
+								+ "</div> </div>";
+							slider.appendSlide(slide_html);
+						}
+						else
+						{
+							var slide_html= "<div style='text-align:center;overflow:scroll' id=slide class='rsContent'>"
+								+ "<img src='"+slide_html_path+"' height='100%'>"
+								+ "<div class='rsTmb'>"
+								+ "<h5>SLIDE"+slide+"</h5>"
+								+ "     <span>Slide "+slide+" here</span>"
+								+ "</div> </div>";
+							slider.appendSlide(slide_html);
+						}
 					}
-
-					slider.ev.on('rsAfterSlideChange', function(event) {
-						clearCanvas();
-					});
 
 					$("#video-gallery").css("height","100%");
 					$(".rsOverflow").css("height","100%");
